--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/videojuegospring
+spring.datasource.username=root
+spring.datasource.password=1234
 
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
